# drmdp-fnapprox

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  tox.ini
docs/: manual.md
notebooks/control_exps/: gem-envs-reward-fns.ipynb  x00-envs-rewest-with-control.ipynb  x00-envs-rewest-xconfig-poisson-delay.ipynb  x00-results-exploration.ipynb  x01-results-returnplots.ipynb  x02-results-rel-regret.ipynb  x03-results-statsanalysis.ipynb  x04-results-bayes-ablation.ipynb
notebooks/control_lfa_v1/: x00-envs-rewest-with-control.ipynb  x00-envs-rewest-xconfig-poisson-delay.ipynb  x01-results-returnplots.ipynb  x02-results-return-metrics.ipynb  x03-results-statsanalysis.ipynb  x04-results-bayes-ablation.ipynb
notebooks/control_lfa_v2/: x01-results-returnplots.ipynb  x02-results-return-metrics.ipynb  x03-results-statsanalysis.ipynb
notebooks/convergence/: x00-convergence-td-learning.ipynb  x01-convergence-td-learning-fixed-lr.ipynb
notebooks/gem_envs/: x00-gem-envs-reward-fns.ipynb  x01-gem-envs-control.ipynb  x01-rlp-envs-control.ipynb  x02-gem-envs-control-opt.ipynb
notebooks/state_projection/: gm-projection-envs.ipynb  play.ipynb  tiling-options.ipynb  x00-gm-projection-concept.ipynb  x01-gm-projection-envs.ipynb  x02-random-binary-projection-discrete-envs.ipynb  x02-tiling-ohe-projection-envs.ipynb  x02-tiling-projection-envs.ipynb  x02-tiling-seg-projection-envs.ipynb  x03-control-tiling-projection-envs.ipynb  x03-rewest-gem-envs-penaliseterm.ipynb  x03-rewest-gem-envs-posenforce.ipynb  x03-rewest-gem-envs.ipynb  x04-control-projection-comparison-envs.ipynb  x04-gem-control-def.ipynb  x04-rlp-envs-control.ipynb
sbin/local/: controlexps-controljob.sh  controlexps-resultaggjob.sh  controlexps-rewest.sh  ray-cluster-start.sh  ray-cluster-stop copy.sh  ray-job-stop.sh
src/drmdp/: algorithms.py  constants.py  core.py  data.py  dataproc.py  envs.py  feats.py  hashtutils.py  ioutils.py  logger.py  mathutils.py  metrics.py  optsol.py  rewdelay.py  task.py  tiles.py  transform.py
src/drmdp/envs/: __init__.py  gem.py  gympg.py  wrappers.py
src/drmdp/workflows/: bayesleastjob.py  biasvarjob.py  control_results_agg_pipeline.py  controlexps.py  controljob.py  gem_control_opt.py  gem_rewest.py  rewest.py
tests/drmdp/: test_feats.py  test_hashutils.py  test_mathutils.py  test_metrics.py  test_optsol.py  test_rewdelay.py  test_tiles.py  test_transform.py
tests/drmdp/envs/: test_wrappers.py
